Mdify login and add signup fetch[#163670709]

--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -16,7 +16,7 @@
 				<ul>
 					<li><a href="home.html">Home</a></li>
 					<li><a href="location.html">View-Map</a></li>
-					<a href="index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
+					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
 				</ul>
 			</nav>
 		</div>
