Modify Ui layout

--- a/css/style.css
+++ b/css/style.css
@@ -283,9 +283,14 @@ a {
   padding: 4px 24px;
 }
 
-output{
+.output{
   float: left;
   font-weight: bold;
+}
+
+output{
+  float: right;
+  font-weight: bolder;
 }
 
 label {
