--- a/templates/admin/location.html
+++ b/templates/admin/location.html
@@ -18,8 +18,7 @@
 			<nav>
 				<ul>
 					<li><a href="dash.html">DashBoard</a></li>
-					<li><a href="edit-red.html">Edit Redflag</a></li>
-					<li><a href="edit-inter.html">Edit Intervestion</a></li>
+					<li><a href="location.html">Location</a></li>
 					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
 				</ul>
 			</nav>
