--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -19,8 +19,7 @@
 			<nav>
 				<ul>
 					<li><a href="dash.html">DashBoard</a></li>
-					<li><a href="edit-red.html">Edit Redflag</a></li>
-					<li><a href="edit-inter.html">Edit Intervestion</a></li>
+					<li><a href="location.html">Location</a></li>
 					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
 				</ul>
 			</nav>
@@ -46,5 +45,5 @@
 		</div>
 	</div>
 </body>
-<script src="../../js/redflag.js"></script>
+<script src="../../js/redflagadmin.js"></script>
 </html>
