--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -20,7 +20,7 @@
 			<nav>
 				<ul>
 					<li><a href="dash.html">DashBoard</a></li>
-					<li><a href="edit-red.html">Edit Redflag</a></li>
+					<li><a href="location.html">Location</a></li>
 					<li><a href="edit-inter.html">Edit Intervestion</a></li>
 					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
 				</ul>
@@ -30,7 +30,6 @@
 			<h2>AD<span style="color:rgb(124,252,0)">MIN</span> Dashboard</h2>
 		</div>
 		<div class="main">
-			
 			<div id="table"></div>
 		</div>
 		<div class="footer">
