--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -18,7 +18,8 @@
 			<nav>
 				<ul>
 					<li><a href="dash.html">Home</a></li>
-					<li><a href="location.html">View-Map</a></li>
+					<li><a href="redflag-form.html">Redflag-Form</a></li>
+					<li><a href="intervetion-form.html">Intervestion-Form</a></li>
 					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
 				</ul>
 			</nav>
@@ -38,7 +39,7 @@
 				</td>
 				<td>
 					<div class="card">
-					  <img src="../../img/interven.png" alt="Avatar" style="width:100%">
+					  <img src="../../img/interven.png" alt="Avatar" style="width:80%">
 					  <div class="card-container">
 					  	<button class="dash" onclick="intervention()"><i class="fas fa-people-carry" style="color: green"></i><b style="color: white"> Intervention Records: 0</b></button>
 					  </div>
@@ -46,7 +47,7 @@
 				</td>
 				<td>
 					<div class="card">
-					  <img src="../../img/redflags.jpeg" alt="Avatar" style="width:100%; height: 150%;">
+					  <img src="../../img/redflags.jpeg" alt="Avatar" style="width:85%; height: 150%;">
 					  <div class="card-container">
 					    <button class="dash" onclick="redflag()"><i class="fa fa-gavel" style="color: red"></i><b style="color: white"> Redflag Records: 0</b></button>
 					  </div>
