--- a/templates/user/redflags.html
+++ b/templates/user/redflags.html
@@ -19,7 +19,7 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="dash.html">Home</a></li>
 					<li><a href="redflag-form.html">Redflag-Form</a></li>
 					<li><a href="intervetion-form.html">Intervestion-Form</a></li>
 					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
@@ -55,7 +55,7 @@
 		    </div>
 			<script>
 				function openForm() {
-				  document.getElementById("myForm").style.display = "block"K, ,
+				  document.getElementById("myForm").style.display = "block";
 				}
 
 				function closeForm() {
