--- a/templates/user/intervetion-form.html
+++ b/templates/user/intervetion-form.html
@@ -17,7 +17,7 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="dash.html">Home</a></li>
 					<li><a href="redflag-form.html">Redflag-Form</a></li>
 					<li><a href="intervetion-form.html">Intervestion-Form</a></li>
 					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
