--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -16,8 +16,8 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="index.html">Index Page</a></li>
-					<li><a href="templates/user/about.html">About</a></li>
+					<li><a href="../../index.html">Index</a></li>
+					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
 		</div>
