--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -32,10 +32,10 @@
 			<div class="card form-popup" id="myForm"></div>
 			<div id="table"></div>
 			<script>
-				function openview() {
+				function openView() {
 				  document.getElementById("myForm").style.display = "block";
 				}
-				function openedit() {
+				function openEdit() {
 				  document.getElementById("myForm").style.display = "block";
 				}
 				function closeForm() {
