--- a/templates/user/interventions.html
+++ b/templates/user/interventions.html
@@ -33,7 +33,10 @@
 			<div class="card form-popup" id="myForm"></div>
 			<div id="table"></div>
 			<script>
-				function openForm() {
+				function openView() {
+				  document.getElementById("myForm").style.display = "block";
+				}
+				function openEdit() {
 				  document.getElementById("myForm").style.display = "block";
 				}
 
