--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 nav{
     background-color: rgb(0,0,0,0.7);
