--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -31,10 +31,12 @@
 			<div class="card form-popup" id="myForm"></div>
 			<div id="table"></div>
 			<script>
-				function openForm() {
+				function openView() {
 				  document.getElementById("myForm").style.display = "block";
 				}
-
+				function openEdit() {
+				  document.getElementById("myForm").style.display = "block";
+				}
 				function closeForm() {
 				  document.getElementById("myForm").style.display = "none";
 				}
