--- a/templates/user/redflags.html
+++ b/templates/user/redflags.html
@@ -30,34 +30,15 @@
 			<h2>User <span style="color:rgb(124,252,0)">Redflag</span> Records</h2>
 		</div>
 		<div class="main">
+			<div class="form-popup" id="myForm"></div>
 			<div id="table"></div>
-			<div class="form-popup" id="myForm">
-		      <form action="#" class="form-container">
-		        <h1>Upadte Record</h1>
-		        <h2><span style="color:darkgreen">form-number</span> ${id}</h2> 
-		        <p id="sucessIntervention" style="color: green"></p>
-		        <p id="messageError" style="color: red"></p>
-		        <label for="title"><i class="fa fa-institution"></i> Title</label>
-		        <input type="text" id="title" name="title" placeholder="${records[record].title}" required>
-		        <p id="longtitudeError" style="color: red"></p>
-		        <p id="latitudeError" style="color: red"></p>
-		        <label for="adr"><i class="fa fa-address-card-o"></i> Location</label>
-		        <br>
-		        <input type="location" id="long" style="float:left;" placeholder="${records[record].longtitude}" required>
-		        <input type="location" id="lat" style="float:left;" placeholder="${records[record].latitude}" required>
-		        <br>
-		        <label for="Comment"><i class="fa fa-comments" aria-hidden="true"></i> Comment</label>
-		         <textarea type="text" id="comment" name="comment" placeholder="${records[record].comment}" required></textarea>
-		        <p id="commentError" style="color: red"></p>
-		        <button type="submit" class="btn">Update</button>
-		        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-		      </form>
-		    </div>
 			<script>
-				function openForm() {
+				function openView() {
 				  document.getElementById("myForm").style.display = "block";
 				}
-
+				function openEdit() {
+				  document.getElementById("myForm").style.display = "block";
+				}
 				function closeForm() {
 				  document.getElementById("myForm").style.display = "none";
 				}
