Add edit fetch api plus token in header

--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -54,21 +54,7 @@
 					</div>
 				</td>
 			</table>
-			<div class="card form-popup" id="myForm">
-		        <img src="../../img/gent.jpeg" alt="John" style="width:100%">
-		        <h1>Matembu Emmanuel Dominic</h1>
-		        <p class="title">Software Developer/Computer Engineer</p>
-		        <p>Andela  Uganda</p>
-		        <div style="margin: 24px 0;">
-		          <a href="#"><i class="far fa-dribbble"></i></a> 
-		          <a href="#"><i class="far fa-twitter"></i></a>  
-		          <a href="#"><i class="far fa-linkedin"></i></a>  
-		          <a href="#"><i class="far fa-facebook"></i></a> 
-		        </div>
-		        <p><button>Contact</button></p>
-		        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-		      </form>
-		    </div>
+			<div class="card form-popup" id="myForm"></div>
 			<script>
 				function profile() {
 				  document.getElementById("myForm").style.display = "block";
