--- a/templates/user/interventions.html
+++ b/templates/user/interventions.html
@@ -32,6 +32,7 @@
 		<div class="main">
 			<div class="card form-popup" id="myForm"></div>
 			<div id="table"></div>
+			<div id="messageError"></div>
 			<script>
 				function openView() {
 				  document.getElementById("myForm").style.display = "block";
