--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="../../js/interventionadmin.js"></script>
 	<script src="../../js/script.js"></script>
 </head>
 <body>
@@ -31,6 +32,7 @@
 		<div class="main">
 			<div class="card form-popup" id="myForm"></div>
 			<div id="table"></div>
+			<div id="messageError"></div>
 			<script>
 				function openView() {
 				  document.getElementById("myForm").style.display = "block";
@@ -48,5 +50,4 @@
 		</div>
 	</div>
 </body>
-<script src="../../js/interventionadmin.js"></script>
 </html>
