--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -30,6 +30,7 @@
 		<div class="main">
 			<div class="card form-popup" id="myForm"></div>
 			<div id="table"></div>
+			<div id="messageError"></div>
 			<script>
 				function openView() {
 				  document.getElementById("myForm").style.display = "block";
