Add delete api and image plus video upload fetch

--- a/templates/admin/dash.html
+++ b/templates/admin/dash.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
 	<script src="../../js/script.js"></script>
 	<script src="../../js/link.js"></script>
+	<script src="../../js/session.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -19,7 +20,7 @@
 				<ul>
 					<li><a href="dash.html">Home</a></li>
 					<li><a href="location.html">View-Map</a></li>
-					<a href="../../index.html" class="logout" style="float: right;">LogOut</a>
+					<button class="logout" onclick="logOut()" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
 		</div>
