--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="../../js/interventionadmin.js"></script>
 	<script src="../../js/script.js"></script>
+	<script src="../../js/session.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -22,7 +23,7 @@
 				<ul>
 					<li><a href="dash.html">DashBoard</a></li>
 					<li><a href="location.html">Location</a></li>
-					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
+					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
 		</div>
