--- a/templates/admin/location.html
+++ b/templates/admin/location.html
@@ -19,7 +19,7 @@
 				<ul>
 					<li><a href="dash.html">DashBoard</a></li>
 					<li><a href="location.html">Location</a></li>
-					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
+					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
 		</div>
