--- a/templates/user/interventions.html
+++ b/templates/user/interventions.html
@@ -10,6 +10,7 @@
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="../../js/script.js"></script>
+	<script src="../../js/session.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -22,7 +23,7 @@
 					<li><a href="dash.html">DashBoard</a></li>
 					<li><a href="redflag-form.html">Redflag-Form</a></li>
 					<li><a href="intervetion-form.html">Intervestion-Form</a></li>
-					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
+					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
 		</div>
