--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -10,6 +10,7 @@
 	<link rel="icon" href="favicon.jpg" sizes="16x16 32x32" type="image/png">
 	<script src="../../js/script.js"></script>
 	<script src="../../js/users.js"></script>
+	<script src="../../js/session.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -22,7 +23,7 @@
 					<li><a href="dash.html">DashBoard</a></li>
 					<li><a href="location.html">Location</a></li>
 					<li><a href="edit-inter.html">Edit Intervestion</a></li>
-					<a href="../../index.html"  type="" name="" class="logout" style="float: right;">LogOut</a>
+					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
 		</div>
