fix view form to add image or video

--- a/templates/user/redflags.html
+++ b/templates/user/redflags.html
@@ -41,6 +41,12 @@
 				function openEdit() {
 				  document.getElementById("myForm").style.display = "block";
 				}
+				function openImage() {
+				  document.getElementById("myForm").style.display = "block";
+				}
+				function openVideo() {
+				  document.getElementById("myForm").style.display = "block";
+				}
 				function closeForm() {
 				  document.getElementById("myForm").style.display = "none";
 				}
