--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -19,8 +19,7 @@
 			<nav>
 				<ul>
 					<li><a href="dash.html">Home</a></li>
-					<li><a href="redflag-form.html">Redflag-Form</a></li>
-					<li><a href="intervetion-form.html">Intervestion-Form</a></li>
+					<li><a href="incident-form.html">Create Incident</a></li>
 					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
