--- a/templates/user/redflags.html
+++ b/templates/user/redflags.html
@@ -21,8 +21,7 @@
 			<nav>
 				<ul>
 					<li><a href="dash.html">Home</a></li>
-					<li><a href="redflag-form.html">Redflag-Form</a></li>
-					<li><a href="intervetion-form.html">Intervestion-Form</a></li>
+					<li><a href="incident-form.html">Create Incident</a></li>
 					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
@@ -32,8 +31,9 @@
 		</div>
 		<div class="main">
 			<div class="form-popup" id="myForm"></div>
+			<div id="sucessRedflag" style="color: green"></div>
+			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
-			<div id="messageError"></div>
 			<script>
 				function openView() {
 				  document.getElementById("myForm").style.display = "block";
