Modify sql query and signup form

--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -25,7 +25,7 @@
 			<h2>Welcome To IReporter</h2>
 		</div>
 		<div class="main">
-			<form class="signup" id="Signup" action="#" style="border:1px solid #ccc"  autocomplete="on">
+			<form class="signup" id="Signup" action="#" style="border:1px solid #ccc"  autocomplete="off">
 		    <h1>Sign Up</h1>
 		    <hr>
 
@@ -37,15 +37,15 @@
 			<p id="sucessSignup" style="color: green;"></p>
 
 		    <label for="fname"><b>First Name: </b><i class="fa fa-user" aria-hidden="true"></i></label>
-		    <input type="text" id="fname" placeholder="Enter First Name" required>
+		    <input type="text" id="fname" placeholder="Enter First Name" autocomplete="off"  required>
 		    <p id="firstNameError" style="color: red;"></p>
 
-		    <label for="lname"><b>Last Name: </b><i class="fa fa-user" aria-hidden="true"></i></label>
-		    <input type="text" id="lname" placeholder="Enter Last Name" required>
+		    <label for="lname"><b>Last Name: </b><i class="fa fa-user" autocomplete="off"  aria-hidden="true"></i></label>
+		    <input type="text" id="lname" placeholder="Enter Last Name" autocomplete="off"  required>
 		    <p id="lastNameError" style="color: red;"></p>
 
 		    <label for="uname"><b>User Name: </b><i class="fa fa-user" aria-hidden="true"></i></label>
-		    <input type="text" id="uname" placeholder="Enter User Name" required>
+		    <input type="text" id="uname" placeholder="Enter User Name" autocomplete="off"  required>
 		    <p id="userNameError" style="color: red;"></p>
 
 		    <label for="email"><b>Email: </b><i class="fa fa-envelope" aria-hidden="true"></i></label>
