--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -30,8 +30,9 @@
 		</div>
 		<div class="main">
 			<div class="card form-popup" id="myForm"></div>
+			<div id="sucessRedflag" style="color: green"></div>
+			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
-			<div id="messageError"></div>
 			<script>
 				function openView() {
 				  document.getElementById("myForm").style.display = "block";
