--- a/css/style.css
+++ b/css/style.css
@@ -103,16 +103,44 @@ select, textarea {
   resize: vertical;
 }
 
+h1,h2,h3,h4{
+  text-align: center;
+
+}
 
 button[class=signupbtn] {
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
+  align-content: center;
   border: none;
   cursor: pointer;
   width: 75%;
   background-color: green;
 }
+
+
+#map {
+   width:75%;
+   height: 400px;
+   margin: auto;
+   }
+
+#info {
+  display: block;
+  position: relative;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  font-size: 12px;
+  text-align: center;
+  color: #222;
+  background: #fff;
+}
+
+
 
 form[class="signup"]{
   width: 75%;
@@ -365,10 +393,9 @@ table {
     background: rgb(0,0,0,1);
     color: white;
     border-radius: 4px;
-    height: 25px;
     text-align: center;
     cursor: pointer;
-    padding: 1%;
+    padding: auto;
     margin: 5px;
 }
 
@@ -431,6 +458,46 @@ input[class="bt-input"]{
     padding: 10px;
     margin: 10px;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  padding-top: 60px;
+}
+
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5px auto;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0; 
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
 
 .view{
     background: rgb(0,0,0,1);
