--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -31,25 +31,15 @@
 			<h2>User <span style="color:rgb(124,252,0)">Intervention</span> Records</h2>
 		</div>
 		<div class="main">
-			<div class="card form-popup" id="myForm"></div>
+			<div class="modal" id="myForm">
 			<div id="sucessIntervention" style="color: green"></div>
 			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
-			<script>
-				function openView() {
-				  document.getElementById("myForm").style.display = "block";
-				}
-				function openEdit() {
-				  document.getElementById("myForm").style.display = "block";
-				}
-				function closeForm() {
-				  document.getElementById("myForm").style.display = "none";
-				}
-			</script>
 		</div>
 		<div class="footer">
 			<p>copyright @ManuelDominic <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 		</div>
 	</div>
 </body>
+<script src="../../js/table.js"></script>
 </html>
