--- a/templates/user/about.html
+++ b/templates/user/about.html
@@ -23,7 +23,7 @@
 		<div class="sidebar">
 			<h2>ABOUT</h2>
 		</div>
-		<div class="main">
+		<div class="main" style="text-align: center;">
 			<div class="news">
 				<h3>IREPORTER</h3>
 				<p>IReporter enables any/every citizen to bring any form of corruption to the notice of appropriate authorities and the general public.</p>
