--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -28,7 +28,7 @@
 		<div class="sidebar">
 			<h2>U<span style="color:rgb(124,252,0)">SER</span> Dashboard</h2>
 		</div>
-		<div class="main">
+		<div class="main" style="text-align: center;">
 			<div id="myForm" class="modal">
 			  <span onclick="document.getElementById('myForm').style.display='none'" class="close" title="Close Modal">&times;</span>
 			  <div class="modal-content">
@@ -74,22 +74,11 @@
 				</td>
 			</table>
 			<div class="card form-popup" id="myForm"></div>
-			<script>
-				function profile() {
-				  document.getElementById("myForm").style.display = "block";
-
-					var modal = document.getElementById('myForm');
-					window.onclick = function(event) {
-					  if (event.target == modal) {
-					    modal.style.display = "none";
-					  }
-					}
-				}
-			</script>
 		</div>
 		<div class="footer">
 			<p>copyright @ManuelDominic <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 		</div>
 	</div>
 </body>
+<script src="../../js/table.js"></script>
 </html>
