--- a/templates/user/redflags.html
+++ b/templates/user/redflags.html
@@ -29,73 +29,18 @@
 		<div class="sidebar">
 			<h2>User <span style="color:rgb(124,252,0)">Redflag</span> Records</h2>
 		</div>
-		<div class="main">
+		<div class="main" style="text-align: center;">
 			<div class="modal" id="myForm">
 			</div>
 			<div id="sucessRedflag" style="color: green"></div>
 			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
-			<script>
-				function profile() {
-				  document.getElementById("myForm").style.display = "block";
-
-					var modal = document.getElementById('myForm');
-					window.onclick = function(event) {
-					  if (event.target == modal) {
-					    modal.style.display = "none";
-					  }
-					}
-				}
-				function openView() {
-				  // document.getElementById("myForm").style.display = "block";
-				  document.getElementById("myForm").style.display = "block";
-
-					var modal = document.getElementById('myForm');
-					window.onclick = function(event) {
-					  if (event.target == modal) {
-					    modal.style.display = "none";
-					  }
-					}
-				}
-				function openEdit() {
-				  // document.getElementById("myForm").style.display = "block";
-				  document.getElementById("myForm").style.display = "block";
-
-					var modal = document.getElementById('myForm');
-					window.onclick = function(event) {
-					  if (event.target == modal) {
-					    modal.style.display = "none";
-					  }
-					}
-				}
-				function openImage() {
-				  // document.getElementById("myForm").style.display = "block";
-				  document.getElementById("myForm").style.display = "block";
-
-					var modal = document.getElementById('myForm');
-					window.onclick = function(event) {
-					  if (event.target == modal) {
-					    modal.style.display = "none";
-					  }
-					}
-				}
-				function openVideo() {
-				  // document.getElementById("myForm").style.display = "block";
-				  document.getElementById("myForm").style.display = "block";
-
-					var modal = document.getElementById('myForm');
-					window.onclick = function(event) {
-					  if (event.target == modal) {
-					    modal.style.display = "none";
-					  }
-					}
-				}
-			</script>
 		</div>
 		<div class="footer">
 			<p>copyright @ManuelDominic <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 		</div>
 	</div>
 </body>
+<script src="../../js/table.js"></script>
 <script src="../../js/redflag.js"></script>
 </html>
