--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -23,7 +23,7 @@
 		<div class="sidebar div">
 			<h2>Welcome To IReporter</h2>
 		</div>
-		<div class="main">
+		<div class="main" style="text-align: center;">
 			<form class="signup" id="Signup" action="#" style="border:1px solid #ccc"  autocomplete="off">
 		    <h1>Sign Up</h1>
 		    <hr>
