--- a/templates/admin/location.html
+++ b/templates/admin/location.html
@@ -28,28 +28,9 @@
 		</div>
 		<div class="main">
 			<h4>click on the map to find location</h4>
-            <input id="lat" type="text" class="form-input-title" name="latitude" placeholder="Latitude">
-            <input id="long" type="text" class="form-input-title" name="latitude" placeholder=Longitude>
-			<div class="flex-container" id="myMap" style="width:100%;height:300px;">
-	            <script>
-                  var myMap = L.map("myMap").setView([0.3476, 32.5825], 15);
-                  L.tileLayer("http://{s}.tile.osm.org/{z}/{x}/{y}.png", {
-                      attribution:
-                      'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                      maxZoom: 18
-                  }).addTo(myMap);
-                  myMap.on("contextmenu", function (event) {
-                      console.log(
-                          "user left-clicked on map coordinates: " + event.latlng.toString()
-                      );
-                      L.marker(event.latlng).addTo(myMap);
-                      var lat = document.getElementById('lat');
-                      lat.value += event.latlng.lat.toString();
-                      var long = document.getElementById('long');
-                      long.value += event.latlng.lng.toString();
-                  });
-	            </script>
-            </div>
+            <input id="lat" type="text" placeholder="Latitude">
+            <input id="long" type="text" placeholder=Longitude>
+			<div id="myMap"></div>
 		</div>
 		<div class="footer">
 			 <p>copyright @ManuelDominic <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
@@ -57,4 +38,5 @@
 	</div>
 <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 </body>
+<script src="../../js/map.js"></script>
 </html>
