--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -29,26 +29,16 @@
 			<h2>User <span style="color:rgb(124,252,0)">Redflag</span> Records</h2>
 		</div>
 		<div class="main">
-			<div class="card form-popup" id="myForm"></div>
+			<div class="card modal" id="myForm"></div>
 			<div id="sucessRedflag" style="color: green"></div>
 			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
-			<script>
-				function openView() {
-				  document.getElementById("myForm").style.display = "block";
-				}
-				function openEdit() {
-				  document.getElementById("myForm").style.display = "block";
-				}
-				function closeForm() {
-				  document.getElementById("myForm").style.display = "none";
-				}
-			</script>
 		</div>
 		<div class="footer">
 			<p>copyright @ManuelDominic <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 		</div>
 	</div>
 </body>
+<script src="../../js/table.js"></script>
 <script src="../../js/redflagadmin.js"></script>
 </html>
