Update files and display messages

--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../../css/form-grid.css">
 	<link rel="stylesheet" type="text/css" href="../../css/grid.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
@@ -28,8 +29,8 @@
 		<div class="sidebar">
 			<h2>User <span style="color:rgb(124,252,0)">Redflag</span> Records</h2>
 		</div>
-		<div class="main">
-			<div class="card modal" id="myForm"></div>
+		<div class="main" style="text-align: center;">
+			<div class="modal" id="myForm"></div>
 			<div id="sucessRedflag" style="color: green"></div>
 			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
