--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -21,7 +21,6 @@
 				<ul>
 					<li><a href="dash.html">DashBoard</a></li>
 					<li><a href="location.html">Location</a></li>
-					<li><a href="edit-inter.html">Edit Intervestion</a></li>
 					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
@@ -29,8 +28,8 @@
 		<div class="sidebar">
 			<h2>AD<span style="color:rgb(124,252,0)">MIN</span> Dashboard</h2>
 		</div>
-		<div class="main">
-			<div class="card modal" id="myForm"></div>
+		<div class="main" style="text-align: center;">
+			<div class="modal" id="myForm"></div>
 			<div id="sucessUser" style="color: green"></div>
 			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
