--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,14 @@ input[type=text], input[type=password],input[type=email],input[type=date],input[
 }
 
 input[type=location] {
-  width: 25%;
+  width: 35%;
   padding: 10px;
   margin: 2px;
   border: 1px solid #ccc;
+}
+
+label-crt{
+  margin-left: 20px;
 }
 
 button:hover {
@@ -119,12 +123,11 @@ button[class=signupbtn] {
   background-color: green;
 }
 
-
 #map {
    width:75%;
    height: 400px;
    margin: auto;
-   }
+}
 
 #info {
   display: block;
@@ -140,6 +143,9 @@ button[class=signupbtn] {
   background: #fff;
 }
 
+.form{
+  padding: 50px;
+}
 
 
 form[class="signup"]{
@@ -257,7 +263,7 @@ span.psw {
 }
 
 .form-container {
-  max-width: 300px;
+  /*max-width: 300px;*/
   margin: auto;
   padding: 10px;
   background-color: white;
@@ -270,7 +276,7 @@ span.psw {
   border: none;
   cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
+  margin:auto;
   opacity: 0.8;
 }
 
@@ -307,12 +313,10 @@ a {
 }
 
 .output{
-  float: left;
   font-weight: bold;
 }
 
 output{
-  float: right;
   font-weight: bolder;
 }
 
