--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -3,13 +3,13 @@
 <head>
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../../css/form-grid.css">
 	<link rel="stylesheet" type="text/css" href="../../css/grid.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="../../js/interventionadmin.js"></script>
 	<script src="../../js/script.js"></script>
 	<script src="../../js/session.js"></script>
 </head>
@@ -30,8 +30,8 @@
 		<div class="sidebar">
 			<h2>User <span style="color:rgb(124,252,0)">Intervention</span> Records</h2>
 		</div>
-		<div class="main">
-			<div class="modal" id="myForm">
+		<div class="main" style="text-align: center;">
+			<div class="modal" id="myForm"></div>
 			<div id="sucessIntervention" style="color: green"></div>
 			<div id="messageError" style="color: red"></div>
 			<div id="table"></div>
@@ -42,4 +42,5 @@
 	</div>
 </body>
 <script src="../../js/table.js"></script>
+<script src="../../js/interventionadmin.js"></script>
 </html>
