--- a/templates/user/incident-form.html
+++ b/templates/user/incident-form.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
 	<link rel="stylesheet" type="text/css" href="../../css/grid.css">
-	<script src="../../js/incidentform.js"></script>
+	<script src="../../js/create-form.js"></script>
 	<script src="../../js/session.js"></script>
 </head>
 <body>
@@ -67,4 +67,5 @@
 	</div>
 </body>
 <script src="../../js/map.js"></script>
+<script src="../../js/incidentform.js"></script>
 </html>
