Modify files and links

--- a/templates/admin/dash.html
+++ b/templates/admin/dash.html
@@ -18,8 +18,8 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="dash.html">Home</a></li>
-					<li><a href="location.html">View-Map</a></li>
+					<li><a href="dash.html">DashBoard</a></li>
+					<li><a href="location.html">Location</a></li>
 					<button class="logout" onclick="logOut()" style="float: right;">LogOut</button>
 				</ul>
 			</nav>
