--- a/templates/user/interventions.html
+++ b/templates/user/interventions.html
@@ -21,7 +21,7 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="dash.html">Home</a></li>
+					<li><a href="dash.html">DashBoard</a></li>
 					<li><a href="incident-form.html">Create Incident</a></li>
 					<button onclick="logOut()" class="logout" style="float: right;">LogOut</button>
 				</ul>
