--- a/templates/user/about.html
+++ b/templates/user/about.html
@@ -15,7 +15,7 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="../../index.html">Index Page</a></li>
+					<li><a href="../../index.html">Index</a></li>
 					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
